fix file button overflow issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -531,6 +531,16 @@ p.submit {
 	margin: 15px 0 0;
 }
 
+.wpsf-import {
+    overflow: hidden;
+}
+
+.wpsf-import__false_btn {
+	position: relative;
+	overflow: hidden;
+	display: inline-block;
+}
+
 .wpsf-import input[type=file] {
     position: absolute;
     font-size: 100px;
